--- a/control_inventario/app/templates/entradas/registro_productos_entradas.html
+++ b/control_inventario/app/templates/entradas/registro_productos_entradas.html
@@ -11,7 +11,7 @@
                     <div class="mb-3">
                         <label for="medida" class="form-label">Media</label>
                         <input type="txt" class="form-control" id="medida" name="medida" readonly>
-                        <div class="invalid-feedback" id="medidaError"></div>
+                        <div class="invalid-feedback" id="medidaEntradaError"></div>
                     </div>
                     <div class="mb-3">
                         <label for="proveedores" class="form-label">Proveedor</label><br>
@@ -21,17 +21,17 @@
                             <option value="{{ proveedor.id_proveedor }}">{{ proveedor.nombre }}</option>
                             {% endfor %}
                         </select> 
-                        <div class="invalid-feedback" id="proveedoresError"></div>
+                        <div class="invalid-feedback" id="proveedoresEntradaError"></div>
                     </div>
                     <div class="mb-3">
                         <label for="producto" class="form-label">Nombre</label>
                         <input type="txt" class="form-control" id="producto" name="producto" readonly>
-                        <div class="invalid-feedback" id="productoError"></div>
+                        <div class="invalid-feedback" id="productoEntradaError"></div>
                     </div>
                     <div class="mb-3">
                         <label for="calidad" class="form-label">Calidad</label>
                         <input type="txt" class="form-control" id="calidad" name="calidad" readonly>
-                        <div class="invalid-feedback" id="calidadError"></div>
+                        <div class="invalid-feedback" id="calidadEntradaError"></div>
                     </div>
                     
                     <div class="mb-3">
@@ -42,7 +42,7 @@
                             <option value="{{ categoria.id_categoria }}">{{ categoria.nombre }}</option>
                             {% endfor %}
                         </select> 
-                        <div class="invalid-feedback" id="categoriasError"></div>
+                        <div class="invalid-feedback" id="categoriasEntradaError"></div>
                     </div>
                     <div class="mb-3">
                         <label for="entrada" class="form-label">Cantidad de entrada</label>
@@ -52,7 +52,7 @@
                     <div class="mb-3">
                         <label for="fecha" class="form-label">Fecha</label>
                         <input type="date" class="form-control" id="fecha" name="fecha">
-                        <div class="invalid-feedback" id="fechaError"></div>
+                        <div class="invalid-feedback" id="fechaEntradaError"></div>
                     </div>
                     
                    
