--- a/control_inventario/app/templates/entradas/registro_tinacos_entradas.html
+++ b/control_inventario/app/templates/entradas/registro_tinacos_entradas.html
@@ -17,7 +17,7 @@
                             <option value="{{ proveedor.id_proveedor }}">{{ proveedor.nombre }}</option>
                             {% endfor %}
                         </select> 
-                        <div class="invalid-feedback" id="proveedoresError"></div>
+                        <div class="invalid-feedback" id="proveedoresEntradaError"></div>
                     </div>
                     <div class="mb-3">
                         <label for="producto" class="form-label">Nombre</label>
@@ -27,12 +27,12 @@
                     <div class="mb-3">
                         <label for="litros" class="form-label">Litros</label>
                         <input type="txt" class="form-control" id="litros" name="litros" readonly>
-                        <div class="invalid-feedback" id="productoError"></div>
+                        <div class="invalid-feedback" id="productoEntradaError"></div>
                     </div>
                     <div class="mb-3">
                         <label for="color" class="form-label">Nombre</label>
                         <input type="txt" class="form-control" id="color" name="color" readonly>
-                        <div class="invalid-feedback" id="colorError"></div>
+                        <div class="invalid-feedback" id="colorEntradaError"></div>
                     </div>
                     
                     <div class="mb-3">
@@ -43,7 +43,7 @@
                             <option value="{{ categoria.id_categoria }}">{{ categoria.nombre }}</option>
                             {% endfor %}
                         </select> 
-                        <div class="invalid-feedback" id="categoriasError"></div>
+                        <div class="invalid-feedback" id="categoriasEntradaError"></div>
                     </div>
                     <div class="mb-3">
                         <label for="entrada" class="form-label">Cantidad de entrada</label>
@@ -53,7 +53,7 @@
                     <div class="mb-3">
                         <label for="fecha" class="form-label">Fecha</label>
                         <input type="date" class="form-control" id="fecha" name="fecha">
-                        <div class="invalid-feedback" id="fechaError"></div>
+                        <div class="invalid-feedback" id="fechaEntradaError"></div>
                     </div>
                     
                     
