--- a/control_inventario/app/templates/salidas/registro_salidas_adhesivos.html
+++ b/control_inventario/app/templates/salidas/registro_salidas_adhesivos.html
@@ -1,4 +1,4 @@
-<div class="modal fade" id="Salidas" tabindex="-1" aria-labelledby="modalRegistroLabel" aria-hidden="true">
+<div class="modal fade" id="SalidasAdhesivos" tabindex="-1" aria-labelledby="modalRegistroLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -17,17 +17,17 @@
                             <option value="{{ proveedor.id_proveedor }}">{{ proveedor.nombre }}</option>
                             {% endfor %}
                         </select> 
-                        <div class="invalid-feedback" id="proveedoresError"></div>
+                        <div class="invalid-feedback" id="proveedoresSalidaError"></div>
                     </div>
                     <div class="mb-3">
                         <label for="color" class="form-label">Color</label>
                         <input type="txt" class="form-control" id="color" name="color" readonly>
-                        <div class="invalid-feedback" id="medidaError"></div>
+                        <div class="invalid-feedback" id="medidaSalidaError"></div>
                     </div>
                     <div class="mb-3">
                         <label for="Kilogramos" class="form-label">Kilogramos</label>
                         <input type="txt" class="form-control" id="Kilogramos" name="Kilogramos" readonly>
-                        <div class="invalid-feedback" id="productoError"></div>
+                        <div class="invalid-feedback" id="kilogramosSalidaError"></div>
                     </div>
                     
                     <div class="mb-3">
@@ -38,7 +38,7 @@
                             <option value="{{ categoria.id_categoria }}">{{ categoria.nombre }}</option>
                             {% endfor %}
                         </select> 
-                        <div class="invalid-feedback" id="categoriasError"></div>
+                        <div class="invalid-feedback" id="categoriasSalidaError"></div>
                     </div>
                     <div class="mb-3">
                         <label for="salida" class="form-label">Cantidad de salida</label>
@@ -48,12 +48,12 @@
                     <div class="mb-3">
                         <label for="fecha" class="form-label">Fecha</label>
                         <input type="date" class="form-control" id="fecha" name="fecha">
-                        <div class="invalid-feedback" id="fechaError"></div>
+                        <div class="invalid-feedback" id="fechaSalidaError"></div>
                     </div>
                     <div class="mb-3">
                         <label for="destino" class="form-label">Destino</label>
                         <input type="txt" class="form-control" id="destino" name="destino">
-                        <div class="invalid-feedback" id="origenError"></div>
+                        <div class="invalid-feedback" id="destinoSalidaError"></div>
                     </div>
                     <div class="mb-3">
                         <label for="estatus" class="form-label">Estatus</label><br>
@@ -63,7 +63,7 @@
                             <option>No realizado</option>
                             
                         </select> 
-                        <div class="invalid-feedback" id="estatusError"></div>
+                        <div class="invalid-feedback" id="estatusSalidaError"></div>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
