--- a/control_inventario/app/templates/login.html
+++ b/control_inventario/app/templates/login.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GLACER Glamur Ceramico-Vias</title>
-    
+    <link rel="icon" href="/static/img/GLACER.png" type="image/png">
+
     <link rel="stylesheet" href="/static/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="static/css/style.css">
