--- a/control_inventario/app/templates/usuarios/usuarios.html
+++ b/control_inventario/app/templates/usuarios/usuarios.html
@@ -76,7 +76,7 @@
                 <a href="/consulta_categorias" class="scroll"><i class="bi bi-bookmark-fill"></i></a>
                 <a href="/entradas" class="scroll"><i class="bi bi-cart-plus-fill"></i></a>
                 <a href="/salidas" class="scroll"><i class="bi bi-cart-check-fill"></i></a>
-                <a href="/registro" class="scroll"><i class="bi bi-person-fill-add" style="font-size: 1.3em; margin: 0 3px 0 0;"></i></a>
+                <a href="/consulta_usuarios" class="scroll" id="icon-usuarios"><i class="bi bi-person-fill-add" style="font-size: 1.3em; margin: 0 3px 0 0;"></i></a>
                 <a class="scroll" href="{{ url_for('main.logout') }}"><i class="bi bi-power"></i></a>
                 
 
