--- a/control_inventario/app/templates/categorias/categorias.html
+++ b/control_inventario/app/templates/categorias/categorias.html
@@ -6,6 +6,8 @@
     <title>GLACER Glamur Ceramico-Vias</title>
     <link rel="stylesheet" href="/static/css/menu.css">
     <link rel="stylesheet" href="/static/css/font-awesome.min.css">
+    <link rel="icon" href="/static/img/GLACER.png" type="image/png">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
@@ -66,7 +68,7 @@
                     </ul>
                 </li>
                 <a href="/consulta_proveedores" class="scroll"><i class="bi bi-people-fill"></i></a>
-                <a href="/consulta_categorias" class="scroll"><i class="bi bi-bookmark-fill"></i></a>
+                <a href="/consulta_categorias" class="scroll" id="icon-categorias"><i class="bi bi-bookmark-fill"></i></a>
                 <a href="/entradas" class="scroll"><i class="bi bi-cart-plus-fill"></i></a>
                 <a href="/salidas" class="scroll"><i class="bi bi-cart-check-fill"></i></a>
                 <a href="/consulta_usuarios" class="scroll"><i class="bi bi-person-fill-add" style="font-size: 1.3em; margin: 0 3px 0 0;"></i></a>
