--- a/control_inventario/app/templates/entradas/registro_muros_entradas.html
+++ b/control_inventario/app/templates/entradas/registro_muros_entradas.html
@@ -2,11 +2,11 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="modalRegistroLabel">Nueva entrada</h5>
+                <h5 class="modal-title" id="modalRegistroEntradas">Nueva entrada</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form action="/registro_muros_entradas" method="post" >
+                <form action="/registro_muros_entradas" method="post" onsubmit="return validarFormularioEntradasMurosF()" >
                     <input type="hidden" id="id_producto" name="id_producto">
                     <div class="mb-3">
                         <label for="medida" class="form-label">Media</label>
@@ -15,7 +15,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="proveedores" class="form-label">Proveedor</label><br>
-                        <select id="proveedores" name="proveedores" class="form-control" readonly >
+                        <select id="proveedores" name="proveedores" class="form-control" disabled >
                             <option value="" id="proveedores">Selecciona una opción</option>
                             {% for proveedor in proveedores %}
                             <option value="{{ proveedor.id_proveedor }}">{{ proveedor.nombre }}</option>
@@ -36,7 +36,7 @@
                     
                     <div class="mb-3">
                         <label for="categorias" class="form-label">Categoría</label><br>
-                        <select id="categorias" name="categorias" class="form-control" readonly>
+                        <select id="categorias" name="categorias" class="form-control" disabled>
                             <option value="" id="categorias">Selecciona una opción</option>
                             {% for categoria in categorias %}
                             <option value="{{ categoria.id_categoria }}">{{ categoria.nombre }}</option>
@@ -47,7 +47,7 @@
                     <div class="mb-3">
                         <label for="entrada" class="form-label">Cantidad de entrada</label>
                         <input type="txt" class="form-control" id="entrada" name="entrada">
-                        <div class="invalid-feedback" id="EntradaError"></div>
+                        <div class="invalid-feedback" id="EntradaErrorMU"></div>
                     </div>
                     <div class="mb-3">
                         <label for="fecha" class="form-label">Fecha</label>
@@ -65,3 +65,4 @@
         </div>
     </div>
 </div>
+
