--- a/control_inventario/app/templates/entradas/registro_vitroblock_entradas.html
+++ b/control_inventario/app/templates/entradas/registro_vitroblock_entradas.html
@@ -2,16 +2,16 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="modalRegistroLabel">Nueva entrada</h5>
+                <h5 class="modal-title" id="modalRegistroEntradas">Nueva entrada</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form action="/registro_vitroblock_entradas" method="post" >
+                <form action="/registro_vitroblock_entradas" method="post" onsubmit="return validarFormularioEntradasVitroblock()" >
                     <input type="hidden" id="id_vitroblock" name="id_vitroblock">
                     
                     <div class="mb-3">
                         <label for="proveedoresV" class="form-label">Proveedor</label><br>
-                        <select id="proveedoreV" name="proveedoresV" class="form-control" readonly >
+                        <select id="proveedoreV" name="proveedoresV" class="form-control" disabled >
                             <option value="" id="proveedores">Selecciona una opción</option>
                             {% for proveedor in proveedores %}
                             <option value="{{ proveedor.id_proveedor }}">{{ proveedor.nombre }}</option>
@@ -44,7 +44,7 @@
                     
                     <div class="mb-3">
                         <label for="categorias" class="form-label">Categoría</label><br>
-                        <select id="categorias" name="categorias" class="form-control" readonly>
+                        <select id="categorias" name="categorias" class="form-control" disabled>
                             <option value="" id="categorias">Selecciona una opción</option>
                             {% for categoria in categorias %}
                             <option value="{{ categoria.id_categoria }}">{{ categoria.nombre }}</option>
@@ -55,12 +55,12 @@
                     <div class="mb-3">
                         <label for="entrada" class="form-label">Cantidad de entrada</label>
                         <input type="txt" class="form-control" id="entrada" name="entrada">
-                        <div class="invalid-feedback" id="entradaError"></div>
+                        <div class="invalid-feedback" id="entradaErrorVI"></div>
                     </div>
                     <div class="mb-3">
-                        <label for="fecha" class="form-label">Fecha</label>
-                        <input type="date" class="form-control" id="fecha" name="fecha">
-                        <div class="invalid-feedback" id="fechaEntradaError"></div>
+                        <label for="fechaVI" class="form-label">Fecha</label>
+                        <input type="date" class="form-control" id="fechaVI" name="fechaVI">
+                        <div class="invalid-feedback" id="fechaEntradaErrorVi"></div>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
@@ -71,3 +71,49 @@
         </div>
     </div>
   </div>
+
+
+
+
+  <script>
+    function validarFormularioEntradasVitroblock() {
+        var isValid = true;
+      
+        var entrada = document.getElementById('entrada').value;
+        var entradaError = document.getElementById('entradaErrorVI');
+        var expresionent = /^[0-9]{1,10}$/;
+      
+         if (!expresionent.test(entrada)) {
+            entradaError.textContent = 'Por favor, ingresa un número. Sin espacios.';
+            entradaError.style.display = 'block';
+            isValid = false;
+        } else {
+            entradaError.textContent = '';
+            entradaError.style.display = 'none';
+        }
+      
+        var fechaVI = document.getElementById('fechaVI').value;
+        var fechaErrorVI = document.getElementById('fechaEntradaErrorVi');
+        var fechaActualVI = new Date().toISOString().split('T')[0];
+        
+        if (fechaVI === "") {
+            fechaErrorVI.textContent = 'Por favor, selecciona una fecha.';
+            fechaErrorVI.style.display = 'block';
+            isValid = false;
+        } else if (fechaVI < fechaActualVI) {
+            fechaErrorVI.textContent = 'La fecha no puede ser menor a la fecha actual.';
+            fechaErrorVI.style.display = 'block';
+            isValid = false;
+        } else if (fechaVI > fechaActualVI) {
+            fechaErrorVI.textContent = 'La fecha no puede ser mayor a la fecha actual.';
+            fechaErrorVI.style.display = 'block';
+            isValid = false;
+        }else {
+            fechaErrorVI.textContent = '';
+            fechaErrorVI.style.display = 'none';
+        }
+      
+      
+        return isValid;
+      }
+</script>
