--- a/control_inventario/app/templates/productos/consulta_producto.html
+++ b/control_inventario/app/templates/productos/consulta_producto.html
@@ -9,6 +9,9 @@
             
         {% endif %}
         </div>
+
+        
+        
         <div id="bienvenidoUduario">
             <div class="elemento2">
                 <i id="Descargar" class="bi bi-download"></i>
@@ -32,10 +35,9 @@
         {{ message }}
       </div>
       <script>
-        // Cerrar automáticamente la alerta después de 5 segundos
         setTimeout(function() {
           $('.alert').alert('close');
-        }, 1500);
+        }, 2500);
       </script>
     {% endfor %}
   {% endif %}
@@ -91,7 +93,7 @@
     data-precio="{{ producto.precio }}" 
     data-embalaje="{{ producto.embalaje }}" 
     data-ubicacion="{{ producto.ubicacion }}" 
-    data-categoria="{{ producto.id_categoria }}"> <!-- Esto debería ser "Sanitarios" -->
+    data-categoria="{{ producto.id_categoria }}"> 
     <i class="bi bi-arrow-clockwise" id="i"></i>
 </button>                       {% if session.get('privilegio') == 'Administrador' %}
                                 <button type="submit" class="btn btn-danger" id="btneliminar" data-bs-toggle="modal" data-bs-target="#eliminarP" value="{{ producto.id_producto }}" data-id="{{ producto.id_producto }}"><i class="bi bi-trash3-fill"></i></button>
@@ -154,19 +156,16 @@
         </li>
         {% endif %}
 
-        {# Siempre muestra la primera página #}
         <li class="page-item {% if pagination.page == 1 %}active{% endif %}">
             <a class="page-link" href="{{ url_for('main.consulta_productos', page=1) }}">1</a>
         </li>
 
-        {# Muestra "..." si hay un salto entre la primera página y las páginas visibles #}
         {% if pagination.page > 3 %}
         <li class="page-item disabled">
             <a class="page-link" href="#">...</a>
         </li>
         {% endif %}
 
-        {# Muestra las páginas cercanas a la página actual #}
         {% for page_num in range(pagination.page - 1, pagination.page + 1) %}
             {% if page_num > 1 and page_num < pagination.pages %}
             <li class="page-item {% if page_num == pagination.page %}active{% endif %}">
@@ -175,14 +174,12 @@
             {% endif %}
         {% endfor %}
 
-        {# Muestra "..." si hay un salto entre las páginas visibles y la última página #}
         {% if pagination.page < pagination.pages - 2 %}
         <li class="page-item disabled">
             <a class="page-link" href="#">...</a>
         </li>
         {% endif %}
 
-        {# Siempre muestra la última página #}
         {% if pagination.pages > 1 %}
         <li class="page-item {% if pagination.page == pagination.pages %}active{% endif %}">
             <a class="page-link" href="{{ url_for('main.consulta_productos', page=pagination.pages) }}">{{ pagination.pages }}</a>
@@ -212,8 +209,8 @@
         margin-top: -40px;
     }
     .pagination .page-link {
-        font-size: 16px; /* Cambia el tamaño del texto */
-        padding: 5px 10px; /* Reduce el tamaño del padding */
+        font-size: 16px; 
+        padding: 5px 10px; 
     }
     .pagination .page-item{
         margin: 0 3px;
@@ -223,7 +220,7 @@
         font-size: 16px;
     }
     .pagination .page-item.active .page-link {
-        background-color: rgb(48, 122, 190); /* Color de fondo para el activo */
+        background-color: rgb(48, 122, 190); 
         color: #fff; 
         border-color: rgb(48, 122, 190);
   
