--- a/control_inventario/app/templates/productos/productos.html
+++ b/control_inventario/app/templates/productos/productos.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GLACER Glamur Ceramico-Vias</title>
     <link rel="stylesheet" href="/static/css/menu.css">
+    <link rel="stylesheet" href="/static/css/icon.css">
+    <link rel="icon" href="/static/img/GLACER.png" type="image/png">
+
     <link rel="stylesheet" href="/static/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
@@ -17,19 +20,15 @@
         type="text/css" />
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css">
 </head>
-<body>
+<body data-salidas-pendientes="{{ salidas_pendientes }}">
     <div class="menu">
         <ul class="fondo1">
             <img class="Logovista" src="/static/img/logov.jpeg" alt="">
             <li>GLACER Glamur Cerámico S.A de C.V <p class="titulo">Atlacomulco-Vías</p>  </li>
             
-            <!-- <div class="contenido-buscar">
-                
-                <input type="search" id="search-input" name="search" placeholder="Buscar producto..." >
-                <i id="buscar" class="bi bi-search"></i> 
-            </div> -->
+           
 
-            <div class="search-container">
+            <div class="search-container">            
                 <input type="text" id="search-input" class="" placeholder="Buscar..."><label for="search-input" class="jjj"><div class="lupa"><i id="buscar" class="bi bi-search"></i> </div></label>
             </div>
             
@@ -39,7 +38,7 @@
                 
                 <li class="menu5">
                     <a class="menuProductos" href="#" id="home-link" class="current scroll">
-                        <i class="bi bi-list" style="font-size: 1.5em; margin: 0 10px 0 -3px;"></i>
+                        <i class="bi bi-list" id="menu-icon" style="font-size: 1.5em; margin: 0 10px 0 -3px;"></i>
                     </a>
                     <ul id="subcategories"> 
                         <li>
@@ -79,7 +78,7 @@
                 <a href="/consulta_categorias" class="scroll"><i class="bi bi-bookmark-fill"></i></a>
                 {% endif %}
 
-                <a href="/entradas" class="scroll"><i class="bi bi-cart-plus-fill"></i></a>
+                <a href="/entradas" class="scroll" id="icono-entradas"><i class="bi bi-cart-plus-fill"></i></a>
                 <a href="/salidas" class="scroll"><i class="bi bi-cart-check-fill"></i></a>
 
                 {% if session.get('privilegio') == 'Administrador' %}
@@ -93,19 +92,17 @@
         
     </div>
     {% include 'entradas/registro_productos_entradas.html' %}
-    
     {% include 'productos/consulta_producto.html'%}
     {% include 'salidas/registro_salidas.html' %}
     {% include 'productos/registrar_producto.html' %}
-    
     {% include 'productos/actualizar_productos.html' %}
     {% include 'productos/eliminar_producto.html' %}
     
 
     
     
-
-
+      
+  
     
 
     
@@ -120,10 +117,6 @@
     <script src="/static/js/modal_entradas.js"></script>
     <script src="/static/js/salidas.js"></script>
 
-    
-
-
-    
     
 
     
