--- a/control_inventario/app/templates/salidas/registro_salidas.html
+++ b/control_inventario/app/templates/salidas/registro_salidas.html
@@ -2,11 +2,11 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="modalRegistroLabel">Nueva salida</h5>
+                <h5 class="modal-title" id="modalRegistroSalidas">Nueva salida</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form action="/registro_productos_salidas" method="post" >
+                <form action="/registro_productos_salidas" method="post" onsubmit="return validarFormularioSalidasProductos()" >
                     <input type="hidden" id="id_producto" name="id_producto">
                     <div class="mb-3">
                         <label for="medida" class="form-label">Media</label>
@@ -50,9 +50,9 @@
                         <div class="invalid-feedback" id="entradaSalidaError"></div>
                     </div>
                     <div class="mb-3">
-                        <label for="fecha" class="form-label">Fecha</label>
-                        <input type="date" class="form-control" id="fecha" name="fecha">
-                        <div class="invalid-feedback" id="fechaSalidaError"></div>
+                        <label for="fechapRO" class="form-label">Fecha</label>
+                        <input type="date" class="form-control" id="fechapRO" name="fechapRO">
+                        <div class="invalid-feedback" id="fechaSalidaErrorPRO"></div>
                     </div>
                     <div class="mb-3">
                         <label for="destino" class="form-label">Destino</label>
@@ -78,3 +78,72 @@
         </div>
     </div>
   </div>
+
+
+  <script>
+    function validarFormularioSalidasProductos() {
+        var isValid = true;
+      
+        var entrada = document.getElementById('salida').value;
+        var entradaError = document.getElementById('entradaSalidaError');
+        var expresionent = /^[0-9]{1,10}$/;
+      
+         if (!expresionent.test(entrada)) {
+            entradaError.textContent = 'Por favor, ingresa un número. Sin espacios.';
+            entradaError.style.display = 'block';
+            isValid = false;
+        } else {
+            entradaError.textContent = '';
+            entradaError.style.display = 'none';
+        }
+      
+        var fecha = document.getElementById('fechapRO').value;
+        var fechaError = document.getElementById('fechaSalidaErrorPRO');
+        var fechaActual = new Date().toISOString().split('T')[0];
+        
+        if (fecha === "") {
+            fechaError.textContent = 'Por favor, selecciona una fecha.';
+            fechaError.style.display = 'block';
+            isValid = false;
+        } else if (fecha < fechaActual) {
+            fechaError.textContent = 'La fecha no puede ser menor a la fecha actual.';
+            fechaError.style.display = 'block';
+            isValid = false;
+        } else if (fecha > fechaActual) {
+            fechaError.textContent = 'La fecha no puede ser mayor a la fecha actual.';
+            fechaError.style.display = 'block';
+            isValid = false;
+        }else {
+            fechaError.textContent = '';
+            fechaError.style.display = 'none';
+        }
+      
+        var destino = document.getElementById('destino').value;
+        var destinoError = document.getElementById('origenSalidaError');
+        var expresiondes = /^[A-Z](?:[a-zA-Z0-9áéíóúüñ]+(?:\s[a-zA-Z0-9áéíóúüñ]+)*)?$/;
+
+         if (!expresiondes.test(destino)) {
+            destinoError.textContent = 'Por favor, ingresa un destino correcto. Sin múltiples espacios.';
+            destinoError.style.display = 'block';
+            isValid = false;
+        } else {
+            destinoError.textContent = '';
+            destinoError.style.display = 'none';
+        }
+
+
+
+        var estatus = document.getElementById('estatus').value;
+        var estatusError = document.getElementById('estatusSalidaError');
+        if (estatus === "") {
+            estatusError.textContent = 'Por favor, selecciona un estatus.';
+            estatusError.style.display = 'block';
+            isValid = false;
+        } else {
+            estatusError.textContent = '';
+            estatusError.style.display = 'none';
+        }
+      
+        return isValid;
+      }
+</script>
