--- a/control_inventario/app/templates/salidas/registro_salidas_muros.html
+++ b/control_inventario/app/templates/salidas/registro_salidas_muros.html
@@ -2,62 +2,57 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="modalRegistroLabel">Nueva salida</h5>
+                <h5 class="modal-title" id="modalRegistroSalidas">Nueva salida</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form action="/registro_muros_salidas" method="post" >
+                <form action="/registro_muros_salidas" method="post" onsubmit="return validarFormularioSalidasMuros()" >
                     <input type="hidden" id="id_producto" name="id_producto">
                     <div class="mb-3">
                         <label for="medida" class="form-label">Media</label>
                         <input type="txt" class="form-control" id="medida" name="medida" readonly>
-                        <div class="invalid-feedback" id="medidaSalidaError"></div>
                     </div>
                     <div class="mb-3">
                         <label for="proveedoresmu" class="form-label">Proveedor</label><br>
-                        <select id="proveedoresmu" name="proveedoresmu" class="form-control" >
+                        <select id="proveedoresmu" name="proveedoresmu" class="form-control" disabled>
                             <option value="" id="proveedoresmu">Selecciona una opción</option>
                             {% for proveedor in proveedores %}
                             <option value="{{ proveedor.id_proveedor }}">{{ proveedor.nombre }}</option>
                             {% endfor %}
                         </select> 
-                        <div class="invalid-feedback" id="proveedoresSalidaError"></div>
                     </div>
                     <div class="mb-3">
                         <label for="producto" class="form-label">Nombre</label>
                         <input type="txt" class="form-control" id="producto" name="producto" readonly>
-                        <div class="invalid-feedback" id="productoSalidaError"></div>
                     </div>
                     <div class="mb-3">
                         <label for="calidad" class="form-label">Calidad</label>
                         <input type="txt" class="form-control" id="calidad" name="calidad" readonly>
-                        <div class="invalid-feedback" id="calidadSalidaError"></div>
                     </div>
                     
                     <div class="mb-3">
                         <label for="categoriasMuros" class="form-label">Categoría</label><br>
-                        <select id="categoriasMuros" name="categoriasMuros" class="form-control" readonly>
+                        <select id="categoriasMuros" name="categoriasMuros" class="form-control" disabled>
                             <option value="" id="categoriasMuros">Selecciona una opción</option>
                             {% for categoria in categorias %}
                             <option value="{{ categoria.id_categoria }}">{{ categoria.nombre }}</option>
                             {% endfor %}
                         </select> 
-                        <div class="invalid-feedback" id="categoriasSalidaError"></div>
                     </div>
                     <div class="mb-3">
                         <label for="salida" class="form-label">Cantidad de salida</label>
                         <input type="txt" class="form-control" id="salida" name="salida">
-                        <div class="invalid-feedback" id="SalidaError"></div>
+                        <div class="invalid-feedback" id="SalidaErrorMU"></div>
                     </div>
                     <div class="mb-3">
-                        <label for="fecha" class="form-label">Fecha</label>
-                        <input type="date" class="form-control" id="fecha" name="fecha">
-                        <div class="invalid-feedback" id="fechaSalidaError"></div>
+                        <label for="fechaMU" class="form-label">Fecha</label>
+                        <input type="date" class="form-control" id="fechaMU" name="fechaMU">
+                        <div class="invalid-feedback" id="fechaSalidaErrorMU"></div>
                     </div>
                     <div class="mb-3">
                         <label for="destino" class="form-label">Destino</label>
                         <input type="txt" class="form-control" id="destino" name="destino">
-                        <div class="invalid-feedback" id="destinoSalidaError"></div>
+                        <div class="invalid-feedback" id="destinoSalidaErrorMU"></div>
                     </div>
                     <div class="mb-3">
                         <label for="estatus" class="form-label">Estatus</label><br>
@@ -67,7 +62,7 @@
                             <option>No realizado</option>
                             
                         </select> 
-                        <div class="invalid-feedback" id="estatusSalidaError"></div>
+                        <div class="invalid-feedback" id="estatusSalidaErrorMU"></div>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
@@ -78,3 +73,73 @@
         </div>
     </div>
   </div>
+
+
+  <script>
+    function validarFormularioSalidasMuros() {
+        var isValid = true;
+      
+        var entrada = document.getElementById('salida').value;
+        var entradaError = document.getElementById('SalidaErrorMU');
+        var expresionent = /^[0-9]{1,10}$/;
+      
+         if (!expresionent.test(entrada)) {
+            entradaError.textContent = 'Por favor, ingresa un número. Sin espacios.';
+            entradaError.style.display = 'block';
+            isValid = false;
+        } else {
+            entradaError.textContent = '';
+            entradaError.style.display = 'none';
+        }
+      
+        var fecha = document.getElementById('fechaMU').value;
+        var fechaError = document.getElementById('fechaSalidaErrorMU');
+        var fechaActual = new Date().toISOString().split('T')[0];
+        
+        if (fecha === "") {
+            fechaError.textContent = 'Por favor, selecciona una fecha.';
+            fechaError.style.display = 'block';
+            isValid = false;
+        } else if (fecha < fechaActual) {
+            fechaError.textContent = 'La fecha no puede ser menor a la fecha actual.';
+            fechaError.style.display = 'block';
+            isValid = false;
+        } else if (fecha > fechaActual) {
+            fechaError.textContent = 'La fecha no puede ser mayor a la fecha actual.';
+            fechaError.style.display = 'block';
+            isValid = false;
+        }
+        else {
+            fechaError.textContent = '';
+            fechaError.style.display = 'none';
+        }
+      
+        var destino = document.getElementById('destino').value;
+        var destinoError = document.getElementById('destinoSalidaErrorMU');
+        var expresiondes = /^[A-Z](?:[a-zA-Z0-9áéíóúüñ]+(?:\s[a-zA-Z0-9áéíóúüñ]+)*)?$/;
+
+         if (!expresiondes.test(destino)) {
+            destinoError.textContent = 'Por favor, ingresa un destino correcto. Sin múltiples espacios.';
+            destinoError.style.display = 'block';
+            isValid = false;
+        } else {
+            destinoError.textContent = '';
+            destinoError.style.display = 'none';
+        }
+
+
+
+        var estatus = document.getElementById('estatus').value;
+        var estatusError = document.getElementById('estatusSalidaErrorMU');
+        if (estatus === "") {
+            estatusError.textContent = 'Por favor, selecciona un estatus.';
+            estatusError.style.display = 'block';
+            isValid = false;
+        } else {
+            estatusError.textContent = '';
+            estatusError.style.display = 'none';
+        }
+      
+        return isValid;
+      }
+</script>
