--- a/control_inventario/app/templates/salidas/salidas.html
+++ b/control_inventario/app/templates/salidas/salidas.html
@@ -9,7 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-   
+    <link rel="icon" href="/static/img/GLACER.png" type="image/png">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -80,7 +81,7 @@
                 {% endif %}
 
                 <a href="/entradas" class="scroll"><i class="bi bi-cart-plus-fill"></i></a>
-                <a href="/salidas" class="scroll"><i class="bi bi-cart-check-fill"></i></a>
+                <a href="/salidas" class="scroll" id="icono-salidas"><i class="bi bi-cart-check-fill"></i></a>
 
                 {% if session.get('privilegio') == 'Administrador' %}
                 <a href="/consulta_usuarios" class="scroll"><i class="bi bi-person-fill-add" style="font-size: 1.3em; margin: 0 3px 0 0;"></i></a>
