--- a/control_inventario/app/templates/tinacos/tinacos.html
+++ b/control_inventario/app/templates/tinacos/tinacos.html
@@ -9,7 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    
+    <link rel="icon" href="/static/img/GLACER.png" type="image/png">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -31,7 +32,7 @@
                 
                 <li class="menu5">
                     <a class="menuProductos" href="#" id="home-link" class="current scroll">
-                        <i class="bi bi-list" style="font-size: 1.5em; margin: 0 10px 0 -3px;"></i>
+                        <i class="bi bi-list" id="menu-icon" style="font-size: 1.5em; margin: 0 10px 0 -3px;"></i>
                     </a>
                     <ul id="subcategories"> 
                         <li>
